<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_jeu"
    tools:context=".InscriptionJoueurs">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_dynamic_neutral_variant10"
        android:textSize="25sp"
        android:text="@string/entrez_nom_joueur"
        android:textStyle="bold"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/joueur1Nom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/joueur_1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/dark_blue"
            android:background="@android:color/holo_blue_dark"
            android:textColorHint="@color/light_white" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/demarrerJeu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/demarrer_jeu"
        android:textColor="@color/black"
        android:background="@drawable/demarrer"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/retour"
        android:textColor="@color/black"
        android:background="@drawable/retour"
        />

</LinearLayout>